log/build_2025-09-11_01-09-37/low_level/stderr.log
  File "/home/bagus/ichimonji/odometry/install/low_level/lib/python3.10/site-packages/low_level/anti_collision.py", line 17
    self.get_logger().info(f'terrain altitude = {terrain_altitude}'))
                                                                    ^
SyntaxError: unmatched ')'

